--- a/index.html
+++ b/index.html
@@ -3,20 +3,253 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="stylesheet" href="asset/css/custom.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="asset/css/main.css">
   <link rel="stylesheet" href="asset/css/globle.css">
 
+  <link rel="icon" type="image/x-icon" href="https://img.icons8.com/arcade/64/cheeseburger.png">
 
-  <title>Document</title>
+
+  <title>MOS Burgers</title>
 </head>
 
 <body>
 
+  <!-- <div class="cursor"></div>
+  <div class="dot"></div> -->
+
+  <nav class="navbar navbar-expand-lg menu">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="https://chamarasapumal.github.io/mosburgers/">
+        <img width="50" height="50" src="https://img.icons8.com/arcade/64/cheeseburger.png" alt="cheeseburger"
+          class="d-inline-block align-text-top brand-logo">
+        MOS Burgers
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a id="ourMenuLink" class="nav-link dropdown-toggle" href="https://www.google.com" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              Our Menu
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Burgers</a></li>
+              <li><a class="dropdown-item" href="#">Submarines</a></li>
+              <li><a class="dropdown-item" href="#">Fries</a></li>
+              <li><a class="dropdown-item" href="#">Pasta</a></li>
+              <li><a class="dropdown-item" href="#">Chicken</a></li>
+              <li><a class="dropdown-item" href="#">Beverages</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About us</a>
+          </li>
+          <li class="nav-item your-meal">
+            <a class="nav-link active" aria-current="page" href="#sign-in">Your Meal</a>
+          </li>
+        </ul>
+        <a id="sign-in" href="#sign-in">
+          <img class="sign-in-img brand-logo" width="50" height="50"
+            src="https://img.icons8.com/ios-filled/50/FAB005/meal.png" alt="meal" />
+        </a>
+      </div>
+    </div>
+  </nav>
+
+  <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleRide" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleRide" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleRide" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active c-item">
+        <img
+          src="https://images.pexels.com/photos/19247585/pexels-photo-19247585/free-photo-of-close-up-of-a-burger-with-cheese-and-vegetables.jpeg"
+          class="d-block w-100 c-img" alt="slide 1">
+
+        <div class="carousel-caption top-0 mt-5 ">
+          <p class="mt-5 fs-3 text-uppercase">MOS Burgers: Every bite, a discountable delight!</p>
+          <h1 class="display-1 fw-bolder text-capitalize">MOS Burgers</h1>
+        </div>
+
+      </div>
+      <div class="carousel-item c-item">
+        <img
+          src="https://images.unsplash.com/photo-1556761223-4c4282c73f77?q=100&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          class="d-block w-100 c-img" alt="slide 2">
+
+        <div class="carousel-caption top-0 mt-4 ">
+          <p class="mt-5 fs-3 text-uppercase">Pasta Perfection, Every Twirl Unveils Flavorful Delight!</p>
+          <h1 class="display-1 fw-bolder text-capitalize">Irresistible Pasta Creations</h1>
+        </div>
+
+      </div>
+      <div class="carousel-item c-item">
+        <img
+          src="https://images.unsplash.com/photo-1541557435984-1c79685a082b?q=100&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          class="d-block w-100 c-img" alt="slide 3">
+
+        <div class="carousel-caption top-0 mt-4 ">
+          <p class="mt-5 fs-3 text-uppercase">Grate Cooks, Grander Flavors – Taste the Mastery!</p>
+          <h1 class="display-1 fw-bolder text-capitalize">Culinary Craftsmanship Unleashed!</h1>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <div class="bg-black">
+    <div class="container">
+      <div class="row gy-md-2">
+        <div class="col-md-4 mt-md-4 text-center">
+          <p class="fs-5 p-transition text-white-50 dtl-ico"><img width="24" height="24"
+              src="https://img.icons8.com/ios-filled/50/EBEBEB/croissant.png" alt="airport" /> 6
+            Deliciouse Categories</p>
+        </div>
+        <div class="col-md-4 mt-md-4 text-center">
+          <p class="fs-5 text-white-50 dtl-ico"><img width="24" height="24"
+              src="https://img.icons8.com/ios-filled/50/EBEBEB/discount--v1.png" alt="payment" /> Only
+            pay 5% up front</p>
+        </div>
+        <div class="col-md-4 mt-md-4 my-md-5 text-center">
+          <p class="fs-5 text-white-50 dtl-ico"><img width="24" height="24"
+              src="https://img.icons8.com/ios-filled/50/EBEBEB/crowd.png" alt="verified-account" /> 100's
+            of customers</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <section id="quick-sign-up" class="bg-white">
+    <div class="container col-xl-10 col-xxl-8 px-4 py-5">
+      <div class="row align-items-center g-lg-5 py-5">
+        <div class="col-lg-7 text-center text-lg-start">
+          <h1 class="display-4 fw-bold lh-1 text-body-emphasis mb-3">Vertically centered hero sign-up form</h1>
+          <p class="col-lg-10 fs-4">Below is an example form built entirely with Bootstrap’s form controls. Each
+            required
+            form group has a validation state that can be triggered by attempting to submit the form without completing
+            it.</p>
+        </div>
+        <div class="col-md-10 mx-auto col-lg-5">
+          <form class="p-4 p-md-5 border rounded-3 bg-body-tertiary">
+            <div class="form-floating mb-3">
+              <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+              <label for="floatingInput">Email address</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+              <label for="floatingPassword">Password</label>
+            </div>
+            <div class="checkbox mb-3">
+              <label>
+                <input type="checkbox" value="remember-me"> Remember me
+              </label>
+            </div>
+            <button class="w-100 btn btn-lg btn-warning" type="submit">Sign up</button>
+            <hr class="my-4">
+            <small class="text-body-secondary">By clicking Sign up, you agree to the terms of use.</small>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
+  <section id="footer" class="">
+    <div class="container">
+      <footer class="py-5">
+        <div class="row">
+          <div class="col-6 col-md-2 mb-3">
+            <h5>Burgers</h5>
+            <ul class="nav flex-column">
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Classic Burger</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Turkey Burger</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Chicken Burger</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Cheese Burger</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Bacon Burger</a></li>
+            </ul>
+          </div>
 
+          <div class="col-6 col-md-2 mb-3">
+            <h5>Submarines</h5>
+            <ul class="nav flex-column">
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Crispy Chicken
+                  Submarine</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Chicken Submarine</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Grinder Submarine</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Cheese Submarine</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">MOS Special Submarine</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="col-6 col-md-2 mb-3">
+            <h5>Pasta</h5>
+            <ul class="nav flex-column">
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Chicken n Cheese Pasta</a>
+              </li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Chicken Panne Pasta</a>
+              </li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Creamy Shrimp Pasta</a>
+              </li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Lemon Butter Pasta</a>
+              </li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Tagliatelle Pasta</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="col-md-5 offset-md-1 mb-3">
+            <form>
+              <h5>Subscribe to get our new deals</h5>
+              <p>Monthly digest of what's new and exciting from us.</p>
+              <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+                <label for="newsletter1" class="visually-hidden">Email address</label>
+                <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+                <button class="btn btn-warning" type="button">Subscribe</button>
+              </div>
+            </form>
+          </div>
+        </div>
+
+        <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+          <p>&copy; 2023 BOS Burgers, Inc. All rights reserved.</p>
+          <ul class="list-unstyled d-flex">
+            <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24">
+                  <use xlink:href="#twitter" />
+                </svg></a></li>
+            <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24">
+                  <use xlink:href="#instagram" />
+                </svg></a></li>
+            <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24">
+                  <use xlink:href="#facebook" />
+                </svg></a></li>
+          </ul>
+        </div>
+      </footer>
+    </div>
+  </section>
+
+  <script src="asset/js/click.js"></script>
   <script src="asset/js/app.js"></script>
   <script src="asset/bootstrap.bundle.min.js"></script>
 </body>
