AboutUs page - incomplete

--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
 
 <body>
 
-  <!-- <div class="cursor"></div>
-  <div class="dot"></div> -->
-
   <nav class="navbar navbar-expand-lg menu">
     <div class="container-fluid">
       <a class="navbar-brand" href="https://chamarasapumal.github.io/mosburgers/">
@@ -40,7 +37,7 @@
               Our Menu
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Burgers</a></li>
+              <li><a class="dropdown-item" href="./views/burger.html">Burgers</a></li>
               <li><a class="dropdown-item" href="#">Submarines</a></li>
               <li><a class="dropdown-item" href="#">Fries</a></li>
               <li><a class="dropdown-item" href="#">Pasta</a></li>
@@ -52,7 +49,7 @@
             <a class="nav-link" href="#">Pricing</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About us</a>
+            <a class="nav-link" href="./views/about_us.html">About us</a>
           </li>
           <li class="nav-item your-meal">
             <a class="nav-link active" aria-current="page" href="#sign-in">Your Meal</a>
@@ -139,15 +136,351 @@
     </div>
   </div>
 
+  <div class="px-4 pt-5 my-5 text-center border-bottom">
+    <h1 class="display-4 fw-bold text-body-emphasis">Find Your Meal</h1>
+  </div>
+
+
+
+  <div class="container">
+
+    <!-- Burgers -->
+    <div class="row gy-3 mt-md-5">
+
+      <div class="col-md-3">
+        <div class="card h-100">
+          <img src="../asset/img/burgers/classic_burger_lg.jpg" class="card-img-top" alt="dubai mall">
+          <div id="classic-burger" class="card-body">
+            <h5 class="card-title">Classic Burger ( Large ) - LKR 750</h5>
+            <p class="card-text">Indulge in our Classic Burger (Large) – a timeless delight featuring a premium beef
+              patty nestled in toasted buns. Enjoy the perfect blend of fresh lettuce, ripe tomatoes, pickles, and
+              savory sauces, delivering a satisfying and nostalgic taste that never goes out of style.
+            </p>
+            <a data-bs-toggle="modal" data-bs-target="#book-tour" class="btn btn-warning">Add to cart</a>
+            <a data-bs-toggle="modal" data-bs-target="#book-tour" class="btn btn-outline-warning">Buy now</a>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="col-md-3">
+        <div class="card h-100">
+          <img src="../asset/img/burgers/classic_burger_rg.jpg" class="card-img-top" alt="aura skypool">
+          <div class="card-body">
+            <h5 class="card-title">Classic Burger ( Regular ) - LKR 1,500</h5>
+            <p class="card-text">Enjoy our Classic Burger (Regular) – a delightful experience with a juicy beef patty
+              nestled between soft, toasted buns. Featuring fresh lettuce, ripe tomatoes, pickles, and savory sauces,
+              it's a delicious classic that satisfies every craving.</p>
+            <a data-bs-toggle="modal" data-bs-target="#book-tour" class="btn btn-warning">Add to cart</a>
+            <a data-bs-toggle="modal" data-bs-target="#book-tour" class="btn btn-outline-warning">Buy now</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="card h-100">
+          <img src="../asset/img/burgers/turkey_burger.jpg" class="card-img-top" alt="hotel atlantis dubai">
+          <div class="card-body">
+            <h5 class="card-title">Turkey Burger - LKR 1,600</h5>
+            <p class="card-text">Delve into our Turkey Burger—a flavorful twist on a classic. Embrace a succulent
+              turkey patty embraced by lightly toasted buns. Complemented by crisp lettuce, ripe tomatoes, and a
+              medley of zesty pickles and special sauces, it's a deliciously lean and savory choice for a satisfying
+              bite.</p>
+            <a data-bs-toggle="modal" data-bs-target="#book-tour" class="btn btn-warning">Add to cart</a>
+            <a data-bs-toggle="modal" data-bs-target="#book-tour" class="btn btn-outline-warning">Buy now</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+
+        <a class="icon-link mb-1" href="./views/burger.html">
+          <img width="100" height="100" class="mt-lg-5" src="https://img.icons8.com/water-color/100/chevron-right.png"
+            alt="chevron-right" />
+
+        </a>
+
+      </div>
+
+
+    </div>
+    <!-- Burgers -->
+
+
+    <!-- Submarines -->
+    <div class="row gy-3 mt-md-5">
+
+      <div class="col-md-3">
+        <div class="card h-100">
+          <img src="../asset/img/burgers/classic_burger_lg.jpg" class="card-img-top" alt="dubai mall">
+          <div id="classic-burger" class="card-body">
+            <h5 class="card-title">Classic Burger ( Large ) - LKR 750</h5>
+            <p class="card-text">Indulge in our Classic Burger (Large) – a timeless delight featuring a premium beef
+              patty nestled in toasted buns. Enjoy the perfect blend of fresh lettuce, ripe tomatoes, pickles, and
+              savory sauces, delivering a satisfying and nostalgic taste that never goes out of style.
+            </p>
+            <a data-bs-toggle="modal" data-bs-target="#book-tour" class="btn btn-warning">Add to cart</a>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="col-md-3">
+        <div class="card h-100">
+          <img src="../asset/img/burgers/classic_burger_rg.jpg" class="card-img-top" alt="aura skypool">
+          <div class="card-body">
+            <h5 class="card-title">Classic Burger ( Regular ) - LKR 1,500</h5>
+            <p class="card-text">Enjoy our Classic Burger (Regular) – a delightful experience with a juicy beef patty
+              nestled between soft, toasted buns. Featuring fresh lettuce, ripe tomatoes, pickles, and savory sauces,
+              it's a delicious classic that satisfies every craving.</p>
+            <a data-bs-toggle="modal" data-bs-target="#book-tour" class="btn btn-warning">Add to cart</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="card h-100">
+          <img src="../asset/img/burgers/turkey_burger.jpg" class="card-img-top" alt="hotel atlantis dubai">
+          <div class="card-body">
+            <h5 class="card-title">Turkey Burger - LKR 1,600</h5>
+            <p class="card-text">Delve into our Turkey Burger—a flavorful twist on a classic. Embrace a succulent
+              turkey patty embraced by lightly toasted buns. Complemented by crisp lettuce, ripe tomatoes, and a
+              medley of zesty pickles and special sauces, it's a deliciously lean and savory choice for a satisfying
+              bite.</p>
+            <a data-bs-toggle="modal" data-bs-target="#book-tour" class="btn btn-warning">Add to cart</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+
+      </div>
+
+    </div>
+    <!-- Submarines -->
+
+
+    <!-- Fries -->
+    <div class="row gy-3 mt-md-5">
+
+      <div class="col-md-3">
+        <div class="card h-100">
+          <img src="../asset/img/burgers/classic_burger_lg.jpg" class="card-img-top" alt="dubai mall">
+          <div id="classic-burger" class="card-body">
+            <h5 class="card-title">Classic Burger ( Large ) - LKR 750</h5>
+            <p class="card-text">Indulge in our Classic Burger (Large) – a timeless delight featuring a premium beef
+              patty nestled in toasted buns. Enjoy the perfect blend of fresh lettuce, ripe tomatoes, pickles, and
+              savory sauces, delivering a satisfying and nostalgic taste that never goes out of style.
+            </p>
+            <a data-bs-toggle="modal" data-bs-target="#book-tour" class="btn btn-warning">Add to cart</a>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="col-md-3">
+        <div class="card h-100">
+          <img src="../asset/img/burgers/classic_burger_rg.jpg" class="card-img-top" alt="aura skypool">
+          <div class="card-body">
+            <h5 class="card-title">Classic Burger ( Regular ) - LKR 1,500</h5>
+            <p class="card-text">Enjoy our Classic Burger (Regular) – a delightful experience with a juicy beef patty
+              nestled between soft, toasted buns. Featuring fresh lettuce, ripe tomatoes, pickles, and savory sauces,
+              it's a delicious classic that satisfies every craving.</p>
+            <a data-bs-toggle="modal" data-bs-target="#book-tour" class="btn btn-warning">Add to cart</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="card h-100">
+          <img src="../asset/img/burgers/turkey_burger.jpg" class="card-img-top" alt="hotel atlantis dubai">
+          <div class="card-body">
+            <h5 class="card-title">Turkey Burger - LKR 1,600</h5>
+            <p class="card-text">Delve into our Turkey Burger—a flavorful twist on a classic. Embrace a succulent
+              turkey patty embraced by lightly toasted buns. Complemented by crisp lettuce, ripe tomatoes, and a
+              medley of zesty pickles and special sauces, it's a deliciously lean and savory choice for a satisfying
+              bite.</p>
+            <a data-bs-toggle="modal" data-bs-target="#book-tour" class="btn btn-warning">Add to cart</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+
+      </div>
+
+    </div>
+    <!-- Fries -->
+
+
+    <!-- Pasta -->
+    <div class="row gy-3 mt-md-5">
+
+      <div class="col-md-3">
+        <div class="card h-100">
+          <img src="../asset/img/burgers/classic_burger_lg.jpg" class="card-img-top" alt="dubai mall">
+          <div id="classic-burger" class="card-body">
+            <h5 class="card-title">Classic Burger ( Large ) - LKR 750</h5>
+            <p class="card-text">Indulge in our Classic Burger (Large) – a timeless delight featuring a premium beef
+              patty nestled in toasted buns. Enjoy the perfect blend of fresh lettuce, ripe tomatoes, pickles, and
+              savory sauces, delivering a satisfying and nostalgic taste that never goes out of style.
+            </p>
+            <a data-bs-toggle="modal" data-bs-target="#book-tour" class="btn btn-warning">Add to cart</a>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="col-md-3">
+        <div class="card h-100">
+          <img src="../asset/img/burgers/classic_burger_rg.jpg" class="card-img-top" alt="aura skypool">
+          <div class="card-body">
+            <h5 class="card-title">Classic Burger ( Regular ) - LKR 1,500</h5>
+            <p class="card-text">Enjoy our Classic Burger (Regular) – a delightful experience with a juicy beef patty
+              nestled between soft, toasted buns. Featuring fresh lettuce, ripe tomatoes, pickles, and savory sauces,
+              it's a delicious classic that satisfies every craving.</p>
+            <a data-bs-toggle="modal" data-bs-target="#book-tour" class="btn btn-warning">Add to cart</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="card h-100">
+          <img src="../asset/img/burgers/turkey_burger.jpg" class="card-img-top" alt="hotel atlantis dubai">
+          <div class="card-body">
+            <h5 class="card-title">Turkey Burger - LKR 1,600</h5>
+            <p class="card-text">Delve into our Turkey Burger—a flavorful twist on a classic. Embrace a succulent
+              turkey patty embraced by lightly toasted buns. Complemented by crisp lettuce, ripe tomatoes, and a
+              medley of zesty pickles and special sauces, it's a deliciously lean and savory choice for a satisfying
+              bite.</p>
+            <a data-bs-toggle="modal" data-bs-target="#book-tour" class="btn btn-warning">Add to cart</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+
+      </div>
+
+    </div>
+    <!-- Pasta -->
+
+
+    <!-- Chicken -->
+    <div class="row gy-3 mt-md-5">
+
+      <div class="col-md-3">
+        <div class="card h-100">
+          <img src="../asset/img/burgers/classic_burger_lg.jpg" class="card-img-top" alt="dubai mall">
+          <div id="classic-burger" class="card-body">
+            <h5 class="card-title">Classic Burger ( Large ) - LKR 750</h5>
+            <p class="card-text">Indulge in our Classic Burger (Large) – a timeless delight featuring a premium beef
+              patty nestled in toasted buns. Enjoy the perfect blend of fresh lettuce, ripe tomatoes, pickles, and
+              savory sauces, delivering a satisfying and nostalgic taste that never goes out of style.
+            </p>
+            <a data-bs-toggle="modal" data-bs-target="#book-tour" class="btn btn-warning">Add to cart</a>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="col-md-3">
+        <div class="card h-100">
+          <img src="../asset/img/burgers/classic_burger_rg.jpg" class="card-img-top" alt="aura skypool">
+          <div class="card-body">
+            <h5 class="card-title">Classic Burger ( Regular ) - LKR 1,500</h5>
+            <p class="card-text">Enjoy our Classic Burger (Regular) – a delightful experience with a juicy beef patty
+              nestled between soft, toasted buns. Featuring fresh lettuce, ripe tomatoes, pickles, and savory sauces,
+              it's a delicious classic that satisfies every craving.</p>
+            <a data-bs-toggle="modal" data-bs-target="#book-tour" class="btn btn-warning">Add to cart</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="card h-100">
+          <img src="../asset/img/burgers/turkey_burger.jpg" class="card-img-top" alt="hotel atlantis dubai">
+          <div class="card-body">
+            <h5 class="card-title">Turkey Burger - LKR 1,600</h5>
+            <p class="card-text">Delve into our Turkey Burger—a flavorful twist on a classic. Embrace a succulent
+              turkey patty embraced by lightly toasted buns. Complemented by crisp lettuce, ripe tomatoes, and a
+              medley of zesty pickles and special sauces, it's a deliciously lean and savory choice for a satisfying
+              bite.</p>
+            <a data-bs-toggle="modal" data-bs-target="#book-tour" class="btn btn-warning">Add to cart</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+
+      </div>
+
+    </div>
+    <!-- Chicken -->
+
+
+    <!-- Beverages -->
+    <div class="row gy-3 mt-md-5">
+
+      <div class="col-md-3">
+        <div class="card h-100">
+          <img src="../asset/img/burgers/classic_burger_lg.jpg" class="card-img-top" alt="dubai mall">
+          <div id="classic-burger" class="card-body">
+            <h5 class="card-title">Classic Burger ( Large ) - LKR 750</h5>
+            <p class="card-text">Indulge in our Classic Burger (Large) – a timeless delight featuring a premium beef
+              patty nestled in toasted buns. Enjoy the perfect blend of fresh lettuce, ripe tomatoes, pickles, and
+              savory sauces, delivering a satisfying and nostalgic taste that never goes out of style.
+            </p>
+            <a data-bs-toggle="modal" data-bs-target="#book-tour" class="btn btn-warning">Add to cart</a>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="col-md-3">
+        <div class="card h-100">
+          <img src="../asset/img/burgers/classic_burger_rg.jpg" class="card-img-top" alt="aura skypool">
+          <div class="card-body">
+            <h5 class="card-title">Classic Burger ( Regular ) - LKR 1,500</h5>
+            <p class="card-text">Enjoy our Classic Burger (Regular) – a delightful experience with a juicy beef patty
+              nestled between soft, toasted buns. Featuring fresh lettuce, ripe tomatoes, pickles, and savory sauces,
+              it's a delicious classic that satisfies every craving.</p>
+            <a data-bs-toggle="modal" data-bs-target="#book-tour" class="btn btn-warning">Add to cart</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="card h-100">
+          <img src="../asset/img/burgers/turkey_burger.jpg" class="card-img-top" alt="hotel atlantis dubai">
+          <div class="card-body">
+            <h5 class="card-title">Turkey Burger - LKR 1,600</h5>
+            <p class="card-text">Delve into our Turkey Burger—a flavorful twist on a classic. Embrace a succulent
+              turkey patty embraced by lightly toasted buns. Complemented by crisp lettuce, ripe tomatoes, and a
+              medley of zesty pickles and special sauces, it's a deliciously lean and savory choice for a satisfying
+              bite.</p>
+            <a data-bs-toggle="modal" data-bs-target="#book-tour" class="btn btn-warning">Add to cart</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+
+      </div>
+
+    </div>
+    <!-- Beverages -->
+
+  </div>
+
   <section id="quick-sign-up" class="bg-white">
     <div class="container col-xl-10 col-xxl-8 px-4 py-5">
       <div class="row align-items-center g-lg-5 py-5">
         <div class="col-lg-7 text-center text-lg-start">
-          <h1 class="display-4 fw-bold lh-1 text-body-emphasis mb-3">Vertically centered hero sign-up form</h1>
-          <p class="col-lg-10 fs-4">Below is an example form built entirely with Bootstrap’s form controls. Each
-            required
-            form group has a validation state that can be triggered by attempting to submit the form without completing
-            it.</p>
+          <h1 class="display-4 fw-bold lh-1 text-body-emphasis mb-3">Unlock Delicious Deals, Join Now!</h1>
+          <p class="col-lg-10 fs-4">Indulge in exclusive promotions and faster ordering by joining us today! Unlock
+            mouthwatering deals, personalized recommendations, and seamless convenience. Taste the difference with our
+            membership perks. Sign up and savor now!</p>
         </div>
         <div class="col-md-10 mx-auto col-lg-5">
           <form class="p-4 p-md-5 border rounded-3 bg-body-tertiary">
@@ -181,7 +514,8 @@
           <div class="col-6 col-md-2 mb-3">
             <h5>Burgers</h5>
             <ul class="nav flex-column">
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Classic Burger</a></li>
+              <li class="nav-item mb-2"><a href="#classic-burger" class="nav-link p-0 text-body-secondary">Classic
+                  Burger</a></li>
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Turkey Burger</a></li>
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Chicken Burger</a></li>
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Cheese Burger</a></li>
@@ -232,7 +566,7 @@
         </div>
 
         <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-          <p>&copy; 2023 BOS Burgers, Inc. All rights reserved.</p>
+          <p>&copy; 2023 MOS Burgers, Inc. All rights reserved.</p>
           <ul class="list-unstyled d-flex">
             <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24">
                   <use xlink:href="#twitter" />
