Sign up page incomplete

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
             <a class="nav-link" href="./views/about_us.html">About us</a>
           </li>
           <li class="nav-item your-meal">
-            <a class="nav-link active" aria-current="page" href="#sign-in">Your Meal</a>
+            <a class="nav-link active" aria-current="page" href="./views/sign_up.html">Your Meal</a>
           </li>
         </ul>
-        <a id="sign-in" href="#sign-in">
-          <img class="sign-in-img brand-logo" width="50" height="50"
-            src="https://img.icons8.com/ios-filled/50/FAB005/meal.png" alt="meal" />
+        <a id="sign-up" href="./views/sign_up.html">
+          <div><img class="sign-in-img brand-logo" width="50" height="50"
+              src="https://img.icons8.com/ios-filled/50/FAB005/meal.png" alt="meal" /></div>
         </a>
       </div>
     </div>
@@ -149,7 +149,7 @@
 
       <div class="col-md-3">
         <div class="card h-100">
-          <img src="../asset/img/burgers/classic_burger_lg.jpg" class="card-img-top" alt="dubai mall">
+          <img src="./asset/img/burgers/classic_burger_lg.jpg" class="card-img-top" alt="dubai mall">
           <div id="classic-burger" class="card-body">
             <h5 class="card-title">Classic Burger ( Large ) - LKR 750</h5>
             <p class="card-text">Indulge in our Classic Burger (Large) – a timeless delight featuring a premium beef
@@ -165,7 +165,7 @@
 
       <div class="col-md-3">
         <div class="card h-100">
-          <img src="../asset/img/burgers/classic_burger_rg.jpg" class="card-img-top" alt="aura skypool">
+          <img src="./asset/img/burgers/classic_burger_rg.jpg" class="card-img-top" alt="aura skypool">
           <div class="card-body">
             <h5 class="card-title">Classic Burger ( Regular ) - LKR 1,500</h5>
             <p class="card-text">Enjoy our Classic Burger (Regular) – a delightful experience with a juicy beef patty
@@ -179,7 +179,7 @@
 
       <div class="col-md-3">
         <div class="card h-100">
-          <img src="../asset/img/burgers/turkey_burger.jpg" class="card-img-top" alt="hotel atlantis dubai">
+          <img src="./asset/img/burgers/turkey_burger.jpg" class="card-img-top" alt="hotel atlantis dubai">
           <div class="card-body">
             <h5 class="card-title">Turkey Burger - LKR 1,600</h5>
             <p class="card-text">Delve into our Turkey Burger—a flavorful twist on a classic. Embrace a succulent
@@ -207,12 +207,13 @@
     <!-- Burgers -->
 
 
+
     <!-- Submarines -->
     <div class="row gy-3 mt-md-5">
 
       <div class="col-md-3">
         <div class="card h-100">
-          <img src="../asset/img/burgers/classic_burger_lg.jpg" class="card-img-top" alt="dubai mall">
+          <img src="./asset/img/burgers/classic_burger_lg.jpg" class="card-img-top" alt="dubai mall">
           <div id="classic-burger" class="card-body">
             <h5 class="card-title">Classic Burger ( Large ) - LKR 750</h5>
             <p class="card-text">Indulge in our Classic Burger (Large) – a timeless delight featuring a premium beef
@@ -227,7 +228,7 @@
 
       <div class="col-md-3">
         <div class="card h-100">
-          <img src="../asset/img/burgers/classic_burger_rg.jpg" class="card-img-top" alt="aura skypool">
+          <img src="./asset/img/burgers/classic_burger_rg.jpg" class="card-img-top" alt="aura skypool">
           <div class="card-body">
             <h5 class="card-title">Classic Burger ( Regular ) - LKR 1,500</h5>
             <p class="card-text">Enjoy our Classic Burger (Regular) – a delightful experience with a juicy beef patty
@@ -240,7 +241,7 @@
 
       <div class="col-md-3">
         <div class="card h-100">
-          <img src="../asset/img/burgers/turkey_burger.jpg" class="card-img-top" alt="hotel atlantis dubai">
+          <img src="./asset/img/burgers/turkey_burger.jpg" class="card-img-top" alt="hotel atlantis dubai">
           <div class="card-body">
             <h5 class="card-title">Turkey Burger - LKR 1,600</h5>
             <p class="card-text">Delve into our Turkey Burger—a flavorful twist on a classic. Embrace a succulent
@@ -265,7 +266,7 @@
 
       <div class="col-md-3">
         <div class="card h-100">
-          <img src="../asset/img/burgers/classic_burger_lg.jpg" class="card-img-top" alt="dubai mall">
+          <img src="./asset/img/burgers/classic_burger_lg.jpg" class="card-img-top" alt="dubai mall">
           <div id="classic-burger" class="card-body">
             <h5 class="card-title">Classic Burger ( Large ) - LKR 750</h5>
             <p class="card-text">Indulge in our Classic Burger (Large) – a timeless delight featuring a premium beef
@@ -280,7 +281,7 @@
 
       <div class="col-md-3">
         <div class="card h-100">
-          <img src="../asset/img/burgers/classic_burger_rg.jpg" class="card-img-top" alt="aura skypool">
+          <img src="./asset/img/burgers/classic_burger_rg.jpg" class="card-img-top" alt="aura skypool">
           <div class="card-body">
             <h5 class="card-title">Classic Burger ( Regular ) - LKR 1,500</h5>
             <p class="card-text">Enjoy our Classic Burger (Regular) – a delightful experience with a juicy beef patty
@@ -293,7 +294,7 @@
 
       <div class="col-md-3">
         <div class="card h-100">
-          <img src="../asset/img/burgers/turkey_burger.jpg" class="card-img-top" alt="hotel atlantis dubai">
+          <img src="./asset/img/burgers/turkey_burger.jpg" class="card-img-top" alt="hotel atlantis dubai">
           <div class="card-body">
             <h5 class="card-title">Turkey Burger - LKR 1,600</h5>
             <p class="card-text">Delve into our Turkey Burger—a flavorful twist on a classic. Embrace a succulent
@@ -318,7 +319,7 @@
 
       <div class="col-md-3">
         <div class="card h-100">
-          <img src="../asset/img/burgers/classic_burger_lg.jpg" class="card-img-top" alt="dubai mall">
+          <img src="./asset/img/burgers/classic_burger_lg.jpg" class="card-img-top" alt="dubai mall">
           <div id="classic-burger" class="card-body">
             <h5 class="card-title">Classic Burger ( Large ) - LKR 750</h5>
             <p class="card-text">Indulge in our Classic Burger (Large) – a timeless delight featuring a premium beef
@@ -333,7 +334,7 @@
 
       <div class="col-md-3">
         <div class="card h-100">
-          <img src="../asset/img/burgers/classic_burger_rg.jpg" class="card-img-top" alt="aura skypool">
+          <img src="./asset/img/burgers/classic_burger_rg.jpg" class="card-img-top" alt="aura skypool">
           <div class="card-body">
             <h5 class="card-title">Classic Burger ( Regular ) - LKR 1,500</h5>
             <p class="card-text">Enjoy our Classic Burger (Regular) – a delightful experience with a juicy beef patty
@@ -346,7 +347,7 @@
 
       <div class="col-md-3">
         <div class="card h-100">
-          <img src="../asset/img/burgers/turkey_burger.jpg" class="card-img-top" alt="hotel atlantis dubai">
+          <img src="./asset/img/burgers/turkey_burger.jpg" class="card-img-top" alt="hotel atlantis dubai">
           <div class="card-body">
             <h5 class="card-title">Turkey Burger - LKR 1,600</h5>
             <p class="card-text">Delve into our Turkey Burger—a flavorful twist on a classic. Embrace a succulent
@@ -371,7 +372,7 @@
 
       <div class="col-md-3">
         <div class="card h-100">
-          <img src="../asset/img/burgers/classic_burger_lg.jpg" class="card-img-top" alt="dubai mall">
+          <img src="./asset/img/burgers/classic_burger_lg.jpg" class="card-img-top" alt="dubai mall">
           <div id="classic-burger" class="card-body">
             <h5 class="card-title">Classic Burger ( Large ) - LKR 750</h5>
             <p class="card-text">Indulge in our Classic Burger (Large) – a timeless delight featuring a premium beef
@@ -386,7 +387,7 @@
 
       <div class="col-md-3">
         <div class="card h-100">
-          <img src="../asset/img/burgers/classic_burger_rg.jpg" class="card-img-top" alt="aura skypool">
+          <img src="./asset/img/burgers/classic_burger_rg.jpg" class="card-img-top" alt="aura skypool">
           <div class="card-body">
             <h5 class="card-title">Classic Burger ( Regular ) - LKR 1,500</h5>
             <p class="card-text">Enjoy our Classic Burger (Regular) – a delightful experience with a juicy beef patty
@@ -399,7 +400,7 @@
 
       <div class="col-md-3">
         <div class="card h-100">
-          <img src="../asset/img/burgers/turkey_burger.jpg" class="card-img-top" alt="hotel atlantis dubai">
+          <img src="./asset/img/burgers/turkey_burger.jpg" class="card-img-top" alt="hotel atlantis dubai">
           <div class="card-body">
             <h5 class="card-title">Turkey Burger - LKR 1,600</h5>
             <p class="card-text">Delve into our Turkey Burger—a flavorful twist on a classic. Embrace a succulent
@@ -424,7 +425,7 @@
 
       <div class="col-md-3">
         <div class="card h-100">
-          <img src="../asset/img/burgers/classic_burger_lg.jpg" class="card-img-top" alt="dubai mall">
+          <img src="./asset/img/burgers/classic_burger_lg.jpg" class="card-img-top" alt="dubai mall">
           <div id="classic-burger" class="card-body">
             <h5 class="card-title">Classic Burger ( Large ) - LKR 750</h5>
             <p class="card-text">Indulge in our Classic Burger (Large) – a timeless delight featuring a premium beef
@@ -439,7 +440,7 @@
 
       <div class="col-md-3">
         <div class="card h-100">
-          <img src="../asset/img/burgers/classic_burger_rg.jpg" class="card-img-top" alt="aura skypool">
+          <img src="./asset/img/burgers/classic_burger_rg.jpg" class="card-img-top" alt="aura skypool">
           <div class="card-body">
             <h5 class="card-title">Classic Burger ( Regular ) - LKR 1,500</h5>
             <p class="card-text">Enjoy our Classic Burger (Regular) – a delightful experience with a juicy beef patty
@@ -452,7 +453,7 @@
 
       <div class="col-md-3">
         <div class="card h-100">
-          <img src="../asset/img/burgers/turkey_burger.jpg" class="card-img-top" alt="hotel atlantis dubai">
+          <img src="./asset/img/burgers/turkey_burger.jpg" class="card-img-top" alt="hotel atlantis dubai">
           <div class="card-body">
             <h5 class="card-title">Turkey Burger - LKR 1,600</h5>
             <p class="card-text">Delve into our Turkey Burger—a flavorful twist on a classic. Embrace a succulent
